# learnscrolling

./: .gitignore  AGENTS.md  DESIGN.md  app.py  scratchpad.md  things_to_do.md
cloudflare/: package-lock.json  wrangler.jsonc
cloudflare/src/: App.tsx
cloudflare/worker/: index.ts
inference-backend/: API.md  COMPOSITOR_API.md  app.py  compositor.py  llm.py  pyproject.toml
modal-tts/: .gitignore  app.py
workers/: index.html  package-lock.json  package.json  tsconfig.worker.json  worker-configuration.d.ts  wrangler.jsonc
workers/src/: App.tsx  ReelFeed.tsx  index.css
workers/worker/: env.d.ts  index.ts  llm.ts  workflow.ts
